<resources>
    <string name="app_name">Baufer Fitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Strings related to login and register -->
    <string name="title_activity_login">Sign in</string>
    <string name="register_activity">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_gender">Gender</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_register_user">Error Registering User</string>
    <string name="success_register_user">Welcome, you\'re successfully registered!</string>
    <string name="success_login_user">Welcome to Baufer!</string>
    <string name="error_login_user">Error login user</string>

    <!-- Navigation Header -->
    <string name="nav_diet_string">Diets</string>
    <string name="nav_workout_string">Workouts</string>
    <string name="nav_profile_string">Profile</string>
    <!-- MainActivity -->
    <string name="setup_diet_string">Setup Diet</string>
    <string name="create_routines_string">Create Routines</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- AlertDialog -->
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_diet">Add Diet</string>
    <string name="add_meal">Add Meal</string>

    <!-- Fragment Diet -->
    <string name="diet_fragment">Diet fragment</string>

    <!-- Fragment Meal -->
    <string name="meal_fragment">Meal fragment</string>

    <!-- List Food fragment -->
    <string name="list_food_fragment">List Food fragment</string>

    <!-- Add food fragment -->
    <string name="add_food_fragment">Add food fragment</string>


    <!-- Consumables creation -->
    <string name="action_create_consumable">Create Consumable</string>
    <string name="calories">Calories</string>
    <string name="fat_grams">Fat grams</string>
    <string name="sat_fat_grams">Saturated fat grams</string>
    <string name="trans_fat_grams">Trans fat grams</string>
    <string name="poly_fat_grams">Polyunsaturated fat grams</string>
    <string name="mono_fat_grams">Monounsaturated fat grams</string>
    <string name="carb_grams">Carbohydrate grams</string>
    <string name="sugar_grams">Sugar grams</string>
    <string name="fiber_grams">Fiber grams</string>
    <string name="protein_grams">Protein grams</string>
    <string name="quantity_grams">Quantity (gr/ml)</string>
    <string name="product_name">Product name</string>
    <string name="select_image">Select Image</string>

</resources>
